--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,13 @@ spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
+
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+#vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+#vaadin.devmode.token=e0671794-d805-4dc1-9f4d-0919a998f231
+vaadin.devmode.frontend.hosts=localhost:8081
+vaadin.devmode.hosts-allowed=localhost
 spring.jpa.defer-datasource-initialization = true
 server.port=8081
 spring.kafka.producer.bootstrap-servers=localhost:9092
