--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ vaadin.launch-browser=false
 
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-#vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 #vaadin.devmode.token=e0671794-d805-4dc1-9f4d-0919a998f231
 
 spring.jpa.defer-datasource-initialization = true
