--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,17 @@ spring.datasource.username=postgres
 spring.datasource.password=smit123
 spring.jpa.hibernate.ddl-auto=update
 
-#server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
-
+spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
-
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
-#vaadin.devmode.token=e0671794-d805-4dc1-9f4d-0919a998f231
-
 spring.jpa.defer-datasource-initialization = true
+
+
 server.port=8081
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
