Added Drawer and Navbar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
+#java.library.path=C:\Windows\System32\rxtxSerial.dll
+
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
 # To improve the performance during development.
