Added Kafka dependencies, updated application.properties  and pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-#java.library.path=C:\Windows\System32\rxtxSerial.dll
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
@@ -16,9 +15,10 @@ vaadin.launch-browser=false
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
 
-
+#Kafka Properties
 server.port=8081
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
+#spring.kafka.consumer.group-id=user-group
+#spring.kafka.consumer.auto-offset=earliest
