--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application,com.project.ams
 spring.jpa.defer-datasource-initialization = true
 
 #Kafka Properties
 server.port=8081
-spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=0.0.0.0:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.consumer.group-id=user-group
