--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 		</dependency>
 
 
+
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>-->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
