--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.defer-datasource-initialization = true
 
 #Kafka Properties
 server.port=8081
-spring.kafka.producer.bootstrap-servers=0.0.0.0:9092,0.0.0.0:9093,0.0.0.0:9094
+spring.kafka.producer.bootstrap-servers=localhost:9092 , localhost:9093 , localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.consumer.group-id=user-group
