--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,4 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 #spring.security.user.roles=ADMIN
+#spring.mvc.favicon.enabled=false
