Removed security, tagMapping can now store multiple data. Can read multiple registers now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+spring.main.allow-circular-references=true
 
 
 # Launch the default browser when starting the application in development mode
