--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.defer-datasource-initialization = true
 
 #Kafka Properties
 server.port=8081
-spring.kafka.producer.bootstrap-servers=localhost:9092 , localhost:9093 , localhost:9094
+spring.kafka.producer.bootstrap-servers=localhost:9092, localhost:9093, localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.consumer.group-id=user-group
@@ -27,5 +27,5 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 #Spring Security
 #spring.security.user.name=admin
 #spring.security.user.password=admin
-#spring.security.user.roles=ADMIN
+#spring.security.user.roles=ADMINb
 #spring.mvc.favicon.enabled=false
